--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,43 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Mega:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 *{
-  background-color: #F8F7F8;
-  font-family: "Poppins";
-  color: #251E23;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Lexend Mega", sans-serif;
+  font-weight: 900;
+  color: #000;
+}
+
+.App{
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  background-color: #daf5f0;
+
+}
+
+.container{
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.button{
+  margin-top: 3rem;
+  padding: 10px 12px;
+  border-radius: 6px;
+  border: 3px solid #000;
+  box-shadow: 5px 5px 0px 0px #000;
+  cursor: pointer;
+  background-color: #ffff00;
+  font-size: 1rem;
+}
+
+.button:hover{
+  background-color: #2fff2f;
 }
