--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,6 @@
   padding: 0;
   font-family: "Lexend Mega", sans-serif;
   font-weight: 900;
-  color: #000;
 }
 
 .App{
@@ -25,10 +24,12 @@
   display: flex;
   align-items: center;
   position: relative;
+  width: 65%;
+  height: 23%;
 }
 
 .button{
-  margin-top: 3rem;
+  margin-top: 4rem;
   padding: 10px 12px;
   border-radius: 6px;
   border: 3px solid #000;
@@ -40,4 +41,16 @@
 
 .button:hover{
   background-color: #2fff2f;
+}
+
+.color-card{
+  width: 25%;
+  height: 100%;
+  margin-top: 3rem;
+  padding: 10px 12px;
+  border-radius: 0px;
+  border: 4px solid #000;
+  border-right: 0px;
+  box-shadow: 8px 5px 0px 0px #000;
+  cursor: pointer;
 }
