--- a/src/index.css
+++ b/src/index.css
@@ -20,16 +20,8 @@
 
 }
 
-.container{
-  display: flex;
-  align-items: center;
-  position: relative;
-  width: 65%;
-  height: 23%;
-}
-
 .button{
-  margin-top: 4rem;
+  margin-top: 7rem;
   padding: 10px 12px;
   border-radius: 6px;
   border: 3px solid #000;
@@ -43,14 +35,47 @@
   background-color: #2fff2f;
 }
 
+.container{
+  display: flex;
+  align-items: center;
+  position: relative;
+  width: 50rem;
+  height: 10rem;
+}
+
 .color-card{
-  width: 25%;
-  height: 100%;
+  width: 20%;
+  height: 140%;
   margin-top: 3rem;
   padding: 10px 12px;
-  border-radius: 0px;
   border: 4px solid #000;
-  border-right: 0px;
   box-shadow: 8px 5px 0px 0px #000;
   cursor: pointer;
+  transition: transform 0.3s, width 0.3s, height 0.3s;
+
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.color-card:hover{
+  transition: scale(1.1);
+  width: 25%;
+  height: 150%;
+  border-right: 4px solid #000;
+}
+
+.show-name{
+  font-size: small;
+  color: rgb(255, 255, 255);
+  word-wrap: break-word;
+  align-items: center;
+  position: relative;
+  background-color: #000000;
+  height: 50%;
+  width: 80%;
+  box-shadow: 5px 3px 0px 0px rgb(255, 255, 255);
+  border-radius: 6px;
+  border: 3px solid #ffffff;
 }
