--- a/src/index.css
+++ b/src/index.css
@@ -24,11 +24,11 @@
   margin-top: 7rem;
   padding: 10px 12px;
   border-radius: 6px;
-  border: 3px solid #000;
+  border: 4px solid #000;
   box-shadow: 5px 5px 0px 0px #000;
   cursor: pointer;
   background-color: #ffff00;
-  font-size: 1rem;
+  font-size: 1.5rem;
 }
 
 .button:hover{
@@ -68,14 +68,14 @@
 
 .show-name{
   font-size: small;
-  color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
   word-wrap: break-word;
   align-items: center;
   position: relative;
-  background-color: #000000;
+  background-color: #ffffff;
   height: 50%;
   width: 80%;
-  box-shadow: 5px 3px 0px 0px rgb(255, 255, 255);
+  box-shadow: 5px 3px 0px 0px rgb(0, 0, 0);
   border-radius: 6px;
-  border: 3px solid #ffffff;
+  border: 4px solid #000000;
 }
