--- a/src/index.css
+++ b/src/index.css
@@ -17,30 +17,31 @@
   display: flex;
   flex-direction: column;
   background-color: #daf5f0;
-
 }
 
 .button{
-  margin-top: 7rem;
+  margin-top: 9rem;
   padding: 10px 12px;
   border-radius: 6px;
   border: 4px solid #000;
   box-shadow: 5px 5px 0px 0px #000;
   cursor: pointer;
   background-color: #ffff00;
-  font-size: 1.5rem;
+  font-size: 2.25rem;
+  transition: transform 0.2s, background-color 0.2s;
 }
 
 .button:hover{
   background-color: #2fff2f;
+  transform: scale(1.1);
 }
 
 .container{
   display: flex;
   align-items: center;
   position: relative;
-  width: 50rem;
-  height: 10rem;
+  width: 65rem;
+  height: 13rem;
 }
 
 .color-card{
@@ -78,4 +79,43 @@
   box-shadow: 5px 3px 0px 0px rgb(0, 0, 0);
   border-radius: 6px;
   border: 4px solid #000000;
+}
+
+
+@media (max-width: 1366px) {
+  .button{
+    font-size: 1.5rem;
+    margin-top: 7rem;
+  }
+  .container{
+    width: 50rem;
+    height: 10rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .button{
+    font-size: 1.5rem;
+    margin-top: 7rem;
+  }
+  .container{
+    width: 40rem;
+    height: 8rem;
+  }
+}
+
+@media (max-width: 630px) {
+  .button{
+    font-size: 1.25rem;
+    margin-top: 7rem;
+  }
+  .container{
+    width: 27rem;
+    height: 6rem;
+  }
+  .show-name{
+    font-size: xx-small;
+    height: 60%;
+    width: 90%;
+  }
 }
